invenio_modular_deposit_form/assets/semantic-ui/less/invenio_modular_deposit_form/deposit_form.less
/*
 * Site variables: same cascade as invenio-app-rdm theme (theme.less) and
 * invenio-theme. Resolved via app webpack aliases: themes/rdm, themes/invenio,
 * ../../less/site. When those aliases are missing, (optional) skips and we keep
 * default Semantic UI variables.
 */
@import (optional) "~semantic-ui-less/themes/default/globals/site.variables";
@import (optional) "themes/invenio/globals/site.variables";
@import (optional) "themes/rdm/globals/site.variables";
@import (optional) "../../less/site/globals/site.variables";

/* Same as Semantic UI button.variables: text on primary background = inverted. */
@primaryTextColor: @invertedTextColor;

/* Light border: built-in modification (no custom @negativeBorderColorLight). */
@negativeBorderColorLight: lighten(@negativeBorderColor, 12%);

#rdm-deposit-form {
  /* Error tooltips */
  .ui[class*="pointing above"].label {
    margin-bottom: 0.5em;
  }

  /* Sticky footer */
  .sticky-footer-fixed {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 1000;
    background: #fff;
    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.08);
  }

  // #rdm-deposit-form .sticky-footer-static {
  /* In normal flow when the footer scroll target is in view. */
  // }

  .upload-form-pager {
    .upload-form-stepper-step .title {
      line-height: 1.25em;
    }

    /* Stepper severity: error, warning, info. Badges replace exclamation icon. */
    .upload-form-stepper-step.has-error {
      color: @errorColor;
      background-color: @negativeBackgroundColor;
      border: 1px solid @negativeBorderColor;
      border-left: 0;
      border-top: 1px solid @negativeBorderColorLight;
      border-bottom: 1px solid @negativeBorderColorLight;

      &:first-child {
        border-left: 1px solid @negativeBorderColorLight;
      }
      &:last-child {
        border-right: 1px solid @negativeBorderColorLight;
      }
      .title {
        color: @errorTextColor;
      }
      &:after {
        background-color: @negativeBackgroundColor;
        border-color: @negativeBorderColor;
      }
    }

    .upload-form-stepper-step.has-warning {
      color: #f2711c;
      background-color: #fff8e6;
      border: 1px solid #f2711c;
      border-left: 0;

      .title {
        color: #b45309;
      }
      &:after {
        background-color: #fff8e6;
        border-color: #f2711c;
      }
    }

    .upload-form-stepper-step.has-info {
      color: #2185d0;
      background-color: #e8f4fc;
      border: 1px solid #2185d0;
      border-left: 0;

      .title {
        color: #0d71bb;
      }
      &:after {
        background-color: #e8f4fc;
        border-color: #2185d0;
      }
    }
    .upload-form-stepper-badges {
      position: absolute;
      top: 4em;
      width: 100%;
      left: 0;

      .ui.label {
        margin-left: 0.25em;
      }
    }
  }

  .deposit-form-sidebar-menu {
    .item {
      line-height: 1.25em;

      /* Fluid uses `.ui.fluid.button` for width; override default centered flex content. */
      &.fluid {
        display: flex;
        justify-content: flex-start;
        text-align: left;
      }

      /* Sidebar menu severity: error, warning, info. Badges replace exclamation icon. */
      &.has-error {
        border-left: 3px solid @negativeBorderColor;
        background-color: @negativeBackgroundColor;
      }

      &.has-warning {
        border-left: 3px solid #f2711c;
        background-color: #fff8e6;
      }

      &.has-info {
        border-left: 3px solid #2185d0;
        background-color: #e8f4fc;
      }

      .deposit-form-sidebar-menu-badges {
        position: absolute;
        left: -5em;

        .ui.label {
          margin-left: 0.25em;
          position: relative;
          top: -0.15em;
          min-width: 5.5em;
        }
      }
    }
  }

  /* Non-collapsible form sections: match accordion header styling */
  .invenio-form-section {
    .title {
      color: @primaryColor;
      font-weight: bold;
      font-size: 1.25em;
    }
  }

  /* Form section severity: accordion/segment strip and severity badges (stock-equivalent). */
  .invenio-accordion-field,
  .invenio-form-section {
    &.error {
      border-left: 3px solid @negativeBorderColor;
    }

    &.warning {
      border-left: 3px solid #f2711c;
    }

    &.info,
    .invenio-form-section.info {
      border-left: 3px solid #2185d0;
    }

    .form-section-severity-badges {
      margin-left: 0.5em;

      .ui.label {
        margin-left: 0.25em;
      }
    }

    & > .invenio-field-wrapper:last-child,
    & > .invenio-group-field:last-child {
      .field {
        margin-bottom: 0.5em !important;
      }
    }

    .invenio-field-wrapper {
      &.files-field {
        .ui.horizontal.list > .item:last-child {
          @media all and (min-width: @largestTabletScreen) and (max-width: @largestSmallMonitor) {
            margin-left: 0;
          }
        }
      }
      &.metadata-title-field {
        .field.additional-titles {
          > .fields > .field.mt-15:has(button) {
            margin-top: 0 !important;
          }
          .close-btn {
            margin-top: 1.75em;
          }
        }
      }
      &.metadata-description-field {
        .field.additional-descriptions {
          > .fields > .field.mt-15:has(button) {
            margin-top: 0 !important;
          }
        }
      }
      &.metadata-dates-field {
        & > .field > .helptext {
          margin-bottom: 0;
          margin-top: 0;
        }
        .fields {
          .close-btn {
            margin-top: 1.75em;
          }
        }
      }
      &.metadata-identifiers-field {
        .fields {
          .close-btn {
            margin-top: 1.75em;
          }
        }
      }
      &.metadata-related_identifiers-field {
        .fields {
          .close-btn {
            margin-top: 1.75em;
          }
        }
      }
      &.custom_fields-meeting-meeting-identifiers-field {
        .fields {
          .close-btn {
            margin-top: 1.75em;
          }
        }
      }
    }

    .fields.invenio-group-field {
      margin-bottom: 0;

      .invenio-text-input-field {
        label.helptext {
          margin-top: 0;
          margin-bottom: 0;
        }
      }
    }
  }

  #warning-feedback-div,
  #negative-feedback-div,
  #info-feedback-div {
    .ui.button.basic {
      border: none;
      box-shadow: none !important;
      padding: 0;
      .label {
        top: -0.15em;
      }
    }
  }
}

